--- a/JoHealth/Views/Medicines/Index.cshtml
+++ b/JoHealth/Views/Medicines/Index.cshtml
@@ -25,7 +25,7 @@
                                 }
                             </p>
                             <p>Available: @medicine.QuantityAvailable</p>
-                            <a href="@Url.Action("Details", "Medicine", new { id = medicine.Id })" class="btn btn-primary">View</a>
+                            <a href="@Url.Action("Details", "Medicines", new { id = medicine.Id })" class="btn btn-primary">View</a>
                         </div>
                     </div>
                 </div>
