--- a/JoHealth/Views/Profile/PatientRecords.cshtml
+++ b/JoHealth/Views/Profile/PatientRecords.cshtml
@@ -40,7 +40,7 @@
                     }
                     else if (record.IsApprovedByDoctor && !record.IsAdministeredByPharmacist)
                     {
-                        <span class="text-warning">Pending</span>
+                        <span class="text-danger">Denied</span>
                     }
                     else
                     {
