--- a/JoHealth/Views/Profile/Index.cshtml
+++ b/JoHealth/Views/Profile/Index.cshtml
@@ -26,7 +26,7 @@
            class="btn btn-outline-primary mb-2 w-100">
             Reports
         </a>
-        <a href="@Url.Action("PatientProfile", "Profile")" class="btn btn-outline-secondary mb-2 w-100">
+        <a href="@Url.Action("EditProfile", "Profile")" class="btn btn-outline-secondary mb-2 w-100">
             Edit Profile
         </a>
     </div>
